[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Pixel Adventure 1/Free/Traps/Spikes/Idle.png" type="Texture" id=1]
[ext_resource path="res://scripts/spike.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 2.5 )

[sub_resource type="Animation" id=2]
resource_name = "Pull down"
length = 0.03
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8.5, 24 ), Vector2( 8.5, 28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24.5, 24 ), Vector2( 24.5, 28 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Pull up"
length = 0.03
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8.5, 28 ), Vector2( 8.5, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24.5, 28 ), Vector2( 24.5, 24 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8.5, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24.5, 24 ) ]
}

[node name="Spikes" type="Area2D" groups=["spike"]]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 8.5, 24 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 24.5, 24 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 29.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Pull down" = SubResource( 2 )
"anims/Pull up" = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
